fixed z-index of loading in app.css

--- a/fireball/src/App.css
+++ b/fireball/src/App.css
@@ -173,4 +173,5 @@ footer {
   color: white;
   justify-content: center;
   align-items: center;
+  z-index:9999;
 }
